--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#myskils">My Skills</a></li>
+                <li><a href="#myskills">My Skills</a></li>
                 <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
